2016-09-08 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-531

	* src/m_disort.cc, m_cloudbox.cc, methods.cc (cloudboxSetFullAtm):
	Moved the WSM definition (former cloudboxSetDisort) from m_disort to
	m_cloudbox. Extended applicability to any atm_dim.

	* src/constants.cc, m_checked.cc (cloudbox_checkedCalc):
	Defined minimum distance between cloudbox and alt/lon edges as global
	constant (to hae them consistent in cloudboxSetFullAtm and
	cloudbox_checkedCalc. Adapted cloudbox_checkedCalc accordingly.

	* src/m_rt4.cc (RT4Calc):
	FIXME note on up/down_rad to doit_i_field assignment using
	cloudbox_limits[0] (not an issues now, but needs revision when we allow
	cloudbox_limits[0]!=0).

2016-09-07  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-530

	* src/main.cc: Display relmat info with '-v'.

2016-09-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-529

	* src/m_rt4.cc (RT4Init):
	Loophole fix: RT4 has to be run with cloudbox_limits[0]==0.

	* src/m_disort.cc (DisortInit):
	Minor modifications.

2016-09-05  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-528
	
	Non-working commit of relmat-arts interfacing.  Will work on
	this through to relmat and arts interface is clean.  
	Committing code to ease collaboration.

	* 3rdparty/relmat/*:  relmat and files to interfacce with it.
	See later commits for more details.
	
	* 3rdparty/CMakeLists.txt,CMakeLists.txt,config.h.cmake:
	*  src/CMakeLists.txt: ENABLE_RELMAT
	
	* src/linemixingdata.cc: Added LM_BYBAND as ignore tag for 
	band calculations.
	
	* src/linerecord.{cc,h}: Removed (ReadFromHitranModifiedStream)
	but added reading for hupper and glower to HITRAN reading.
	
	* src/linescaling.{cc,h}: Added (partition_function) as separate
	function to easier get partition function when other scale factors
	are not needed.
	
	* src/m_linemixing.cc:  Changed completely adding 
	(abs_xsec_per_speciesAddLineMixedBands) to interface with relmat.