@@ -1,5 +1,12 @@
 2016-09-08 Jana Mendrok  <jana.mendrok@chalmers.se>
 
+	* arts-2-3-532
+
+	*  m_cloudbox.cc (cloudboxSetFullAtm):
+	Bugfix: loop parameter for upper lat/lon edges corrected.
+
+2016-09-08 Jana Mendrok  <jana.mendrok@chalmers.se>
+
 	* arts-2-3-531
 
 	* src/m_disort.cc, m_cloudbox.cc, methods.cc (cloudboxSetFullAtm):
